# rules_java

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  internal_deps.bzl  internal_setup.bzl
.bazel_checkout/: __README  setup.sh
.bazelci/: presubmit.yml
.bcr/: metadata.template.json  source.template.json
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
distro/: BUILD  BUILD.bazel  README.md  relnotes.bzl
examples/: BUILD
examples/hello-world/: BUILD  HelloWorld.java
examples/hello_world/: BUILD  HelloWorld.java
examples/hello_world/com/google/: HelloWorld.java
java/: BUILD  defs.bzl  defs.bzl.oss  extensions.bzl  http_jar.bzl  java.bzl  java_binary.bzl  java_import.bzl  java_library.bzl  java_plugin.bzl  java_single_jar.bzl  java_test.bzl  repositories.bzl  rules_java_deps.bzl  testutil.bzl
java/bazel/: BUILD.bazel  http_jar.bzl  repositories_util.bzl
java/bazel/common/: BUILD.bazel
java/bazel/rules/: BUILD.bazel  bazel_java_binary.bzl  bazel_java_binary_nonexec.bzl  bazel_java_binary_wrapper.bzl  bazel_java_import.bzl  bazel_java_library.bzl  bazel_java_plugin.bzl  bazel_java_single_jar.bzl  bazel_java_test.bzl  empty.bzl
java/common/: BUILD  java_common.bzl  java_info.bzl  java_plugin_info.bzl  java_semantics.bzl  proguard_spec_info.bzl
java/common/rules/: BUILD  android_lint.bzl  basic_java_library.bzl  import_deps_check.bzl  java_binary.bzl  java_binary_wrapper.bzl  java_helper.bzl  java_import.bzl  java_library.bzl  java_package_configuration.bzl  java_plugin.bzl  java_runtime.bzl  java_single_jar.bzl  java_toolchain.bzl  rule_util.bzl
java/common/rules/impl/: BUILD  basic_java_library_impl.bzl  bazel_java_import_impl.bzl  bazel_java_library_impl.bzl  compile_action.bzl  import_deps_check.bzl  java_binary_deploy_jar.bzl  java_binary_impl.bzl  java_helper.bzl  proguard_validation.bzl
java/config/: BUILD  BUILD.bazel
java/config/host/: BUILD
java/constraints/: BUILD  constraints.bzl
java/constraints/javac/: BUILD
java/constraints/language/: BUILD
java/constraints/runtime/: BUILD
java/constraints/source/: BUILD
java/docs/: BUILD.bazel  rule.vm  rules.bzl  rules.md
java/modules/: BUILD
java/org/bazelbuild/rules_java/modules/: BUILD.bazel  ModuleGenerator.java
java/private/: BUILD  add_tags.bzl  android_support.bzl  boot_class_path_info.bzl  java_common.bzl  java_common_internal.bzl  java_info.bzl  legacy_native.bzl  message_bundle_info.bzl  module.bzl  native.bzl  proto_support.bzl  proto_support.bzl.oss
java/proto/: BUILD  java_lite_proto_library.bzl  java_proto_library.bzl
java/runfiles/: BUILD  BUILD.bazel
java/test/common/: java_common_tests.bzl  java_info_tests.bzl  java_plugin_info_tests.bzl
java/test/common/rules/: BUILD  java_binary_tests.bzl  java_library_tests.bzl  java_plugin_tests.bzl
java/test/private/: BUILD  MyPlugin.java  android_support_tests.bzl
java/test/testutil/: artifact_closure.bzl  cc_info_subject.bzl  java_info_subject.bzl  java_runtime_info_subject.bzl  java_toolchain_info_subject.bzl
java/test/testutil/rules/: bad_java_info_rules.bzl  (+7 more)
java/test/toolchains/: BUILD  java_runtime_tests.bzl
java/toolchains/: BUILD  java_package_configuration.bzl  java_runtime.bzl  java_toolchain.bzl
java/toolchains/javac/: BUILD
java/toolchains/runtime/: BUILD
test/: BUILD.bazel  check_release_notes_test.sh  check_remote_java_tools_configs.sh  check_remote_jdk_configs.sh  check_remotejdk_configs_match.bzl  repositories.bzl
test/analysis/: BUILD.bazel  bootclasspath_tests.bzl
test/bazel/: BUILD.bazel
test/java/bazel/common/: BUILD.bazel  java_common_tests.bzl  java_info_tests.bzl
test/java/bazel/rules/: BUILD.bazel  java_binary_tests.bzl  java_library_tests.bzl  java_plugin_tests.bzl  java_test_tests.bzl
test/java/common/: BUILD  java_common_tests.bzl  java_info_tests.bzl  java_plugin_info_tests.bzl
test/java/common/rules/: BUILD  add_exports_tests.bzl  common_launcher_java_binary_tests.bzl  common_launcher_java_library_tests.bzl  deploy_archive_builder_tests.bzl  java_binary_tests.bzl  java_import_tests.bzl  java_launcher_tests.bzl  java_library_tests.bzl  java_plugin_tests.bzl  java_runtime_tests.bzl  java_single_jar_tests.bzl  java_test_tests.bzl  merge_attrs_tests.bzl
test/java/common/testutil/: BUILD  mock_cc_toolchain.bzl  mock_test_toolchain.bzl
test/java/private/: BUILD  android_support_tests.bzl
test/java/testutil/: BUILD  artifact_closure.bzl  binary_executable_subject.bzl  cc_info_subject.bzl  helper.bzl  java_info_subject.bzl  java_runtime_info_subject.bzl  java_toolchain_info_subject.bzl  javac_action_subject.bzl  javac_action_subject_tests.bzl  mock_java_toolchain.bzl
test/java/testutil/rules/: custom_java_info_rule.bzl  custom_library.bzl  custom_library_with_additional_inputs.bzl  custom_library_with_exports.bzl  custom_library_with_named_outputs.bzl  custom_library_with_sourcepaths.bzl  custom_library_with_strict_deps.bzl  custom_library_with_strict_java_deps_provider.bzl  custom_library_with_wrong_java_toolchain_type.bzl  custom_library_with_wrong_plugins_type.bzl  custom_plugin.bzl  forward_java_info.bzl  forward_java_runtime_info.bzl  java_info_merge.bzl  private_api_usage.bzl  template_var_info_rule.bzl  wrap_java_info.bzl
test/java/toolchains/: BUILD  java_runtime_tests.bzl  java_toolchain_tests.bzl
test/repo/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  setup.bat  setup.sh
test/repo/src/: MakeVarTest.sh  MyTest.java  native_dep.cc  native_test.cc
test/testdata/: BUILD  BUILD.bazel  MyLib.java
test/testdata/other_repo/: BUILD.bazel  MODULE.bazel
test/toolchains/: BUILD.bazel  bootclasspath_tests.bzl  default_java_toolchain_tests.bzl
toolchains/: BUILD  DumpPlatformClassPath.java  bootclasspath.bzl  default_java_toolchain.bzl  extensions.bzl  java_toolchain_alias.bzl  jdk.BUILD  jdk_build_file.bzl  local_java_repository.bzl  remote_java_repository.bzl  toolchain_utils.bzl  utf8_environment.bzl
(+10 files in other folders)
