load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg/releasing:defs.bzl", "print_rel_notes")

package(
    default_visibility = ["//visibility:private"],
)

_VERSION = "7.5.0"

# Build the artifact to put on the github release page.
pkg_tar(
    name = "rules_java-%s" % _VERSION,
    srcs = ["//:distribution"],
    extension = "tar.gz",
    # It is all source code, so make it read-only.
    mode = "0444",
    # Make it owned by root so it does not have the uid of the CI robot.
    owner = "0.0",
    package_dir = ".",
    strip_prefix = ".",
)

print_rel_notes(
    name = "relnotes",
    outs = ["relnotes.txt"],
    deps_method = "rules_java_dependencies",
    repo = "rules_java",
    setup_file = "java:repositories.bzl",
    toolchains_method = "rules_java_toolchains",
    version = _VERSION,
)
