load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load(":relnotes.bzl", "print_rel_notes")

package(default_visibility = ["//visibility:private"])

# Build the artifact to put on the github release page.
pkg_tar(
    name = "rules_java-%s" % module_version(),
    srcs = ["//:distribution"],
    extension = "tar.gz",
    # It is all source code, so make it read-only.
    mode = "0444",
    # Make it owned by root so it does not have the uid of the CI robot.
    owner = "0.0",
    package_dir = ".",
    strip_prefix = ".",
)

print_rel_notes(
    name = "relnotes",
    archive = ":rules_java-%s" % module_version(),
    version = module_version(),
)
