load("@bazel_skylib//rules:common_settings.bzl", "repeatable_string_flag")

repeatable_string_flag(
    name = "coverage_includes",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)

repeatable_string_flag(
    name = "coverage_excludes",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)
