load("@rules_testing//lib:util.bzl", "util")
load("//java:java_binary.bzl", "java_binary")

# Used in test/java/bazel/rules/java_binary_tests.bzl%_test_java_binary_empty_srcs
util.helper_target(
    java_binary,
    name = "bin_without_srcs",
    visibility = [
        "//test/java/bazel/rules:__pkg__",
    ],
)
