load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")  # copybara-use-repo-external-label
load("@rules_java//toolchains:default_java_toolchain.bzl", "NONPREBUILT_TOOLCHAIN_CONFIGURATION", "default_java_toolchain")  # copybara-use-repo-external-label
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_applicable_licenses = ["@rules_java//:license"])

java_library(
    name = "lib",
    srcs = ["src/Main.java"],
)

java_binary(
    name = "bin",
    main_class = "Main",
    runtime_deps = [":lib"],
)

java_test(
    name = "MyTest",
    srcs = ["src/MyTest.java"],
    data = [
        "src/data.txt",
    ],
    deps = [
        "@my_jar//jar",
        "@rules_java//java/runfiles",
    ],
)

genrule(
    name = "MakeVarGenruleTest",
    outs = ["MakeVarGenruleTestSuccess"],
    cmd = "test -f $(JAVA) && test -d $(JAVABASE) && touch $@",
    toolchains = ["@rules_java//toolchains:current_java_runtime"],
    tools = ["@rules_java//toolchains:current_java_runtime"],
)

sh_test(
    name = "MakeVarTest",
    srcs = ["src/MakeVarTest.sh"],
    data = [
        "MakeVarGenruleTestSuccess",
        "@rules_java//toolchains:current_java_runtime",
    ],
    env = {
        "JAVA_ROOTPATH": "$(JAVA_ROOTPATH)",
        "JAVABASE_ROOTPATH": "$(JAVABASE_ROOTPATH)",
    },
    toolchains = ["@rules_java//toolchains:current_java_runtime"],
)

default_java_toolchain(
    name = "my_funky_toolchain",
    bootclasspath = ["@bazel_tools//tools/jdk:platformclasspath"],
    configuration = NONPREBUILT_TOOLCHAIN_CONFIGURATION,
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    java_runtime = "@my_funky_jdk//:jdk",
)
