load(":java_binary_tests.bzl", "java_binary_tests")
load(":java_library_tests.bzl", "java_library_tests")
load(":java_plugin_tests.bzl", "java_plugin_tests")

java_binary_tests(name = "java_binary_tests")

java_library_tests(name = "java_library_tests")

java_plugin_tests(name = "java_plugin_tests")
