load("//java:defs.bzl", "java_binary")

java_binary(
    name = "ModuleGenerator",
    srcs = glob(["*.java"]),
    javacopts = [
        "-source",
        "11",
        "-target",
        "11",
    ],
    main_class = "org.openqa.selenium.tools.modules.ModuleGenerator",
    visibility = ["//visibility:public"],
    deps = [
        "//java/org/bazelbuild/rules_java/zip",
        "//third-party/java:byte-buddy",
        "//third-party/java:javaparser-core",
    ],
)
